force-app/main/default/objects/Ticket__c/Ticket__c.object-meta.xml
<CustomObject>
    <label>Ticket</label>
    <pluralLabel>Tickets</pluralLabel>
    <description
  >Internal work item tracked on the Ticket Board (CLD-1).</description>
    <nameField>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
        <displayFormat>TKT-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>