force-app/main/default/objects/Ticket__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <label>Assignee</label>
    <description>User responsible for the ticket.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Tickets</relationshipName>
    <relationshipLabel>Tickets</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>