force-app/main/default/objects/Ticket__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <description
  >What the ticket asks for and any relevant context.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>