force-app/main/default/objects/Ticket__c/listViews/All_Tickets.listView-meta.xml
<ListView>
    <fullName>All_Tickets</fullName>
    <label>All Tickets</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Assignee__c</columns>
    <columns>CREATED_DATE</columns>
</ListView>